# dusklightTEST2

.github/workflows/: build-celshade-windows.yml  build.yml
cmake/: DetectVersion.cmake  ModSDK.cmake
docs/: modding.md
include/d/: d_com_inf_game.h  d_msg_flow.h  d_save.h  d_stage.h
include/dusk/: mod_loader.hpp  settings.h
include/m_Do/: m_Do_audio.h
include/mods/: api.h  hook.hpp  meta.hpp  service.hpp
mods/ao_mod/: CMakeLists.txt
mods/botw_visual_mod/: CMakeLists.txt  README.md  mod.json
mods/botw_visual_mod/res/: botw_visual.wgsl
mods/botw_visual_mod/src/: mod.cpp
mods/celshade_mod/: CMakeLists.txt  README.md  mod.json
mods/celshade_mod/res/: celshade.wgsl
mods/celshade_mod/src/: mod.cpp
scripts/: apply_botw_lightweight_shadow.py  apply_botw_shadow_preset.py  apply_shipwright_celshade.py
src/Z2AudioLib/: Z2SoundObjMgr.cpp
src/d/: d_com_inf_game.cpp  d_menu_dmap.cpp  d_meter2_draw.cpp  d_meter2_info.cpp  d_msg_class.cpp  d_msg_unit.cpp  d_save.cpp  d_stage.cpp
src/d/actor/: d_a_alink.cpp  d_a_alink_effect.inc  d_a_alink_link.inc  d_a_npc_yelia.cpp  d_a_npc_ykw.cpp
src/dusk/: settings.cpp
src/dusk/mods/loader/: loader.cpp
src/dusk/mods/svc/: gfx.cpp  hook.cpp  registry.cpp
src/dusk/ui/: logs_window.cpp
src/m_Do/: m_Do_audio.cpp  m_Do_main.cpp
